# vjpyree-gpn21

./: .gitignore  Cargo.toml  Layers.md  README.md  tools.py
assets/models/: gpn21-dip.glb
assets/shaders/: chip_card.wgsl  feedback.wgsl  fractal.wgsl  mandelbrot.wgsl  rd.wgsl
src/: automation.rs  beat.rs  beat_controls.rs  chipspin.rs  feedback_shader.rs  main.rs  mandelbrot.rs  motto.rs  projection_map.rs  traktor_beat.rs
src/feedback_shader/: mod.rs  ui.rs
src/fractal/: mod.rs
src/rd/: mod.rs  ui.rs  wipes.rs
