[package]
name = "vjpyree-gpn21"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_pyree = { git="https://github.com/DrLuke/bevy_pyree", rev="056f88da19f0d96d55d6db56977e6e6efe37132d" }
bevy_rosc = "0.6.0"
bevy-inspector-egui = "0.18.3"
rosc = "0.9.1"
bevy = { version = "0.10", default-features = true }
bevy_egui = "0.20.3"
bevy_smud = {git="https://github.com/johanhelsing/bevy_smud", branch="params"}
rand = "0.8.5"

# Significantly improve performance while developing
[profile.dev.package."*"]
opt-level = 3
